--- a/templates/pages/laptop_detail.html
+++ b/templates/pages/laptop_detail.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <h1> {{ laptop.title }} [{{ laptop.category }}] </h1>
-<p>Publish date: {{ laptop.date }}</p>
-<p>Processor: {{ laptop.processor }}</p>
-<p>Game card: {{ laptop.game_card }}</p>
-<p>Number of Nucleis: {{ laptop. nucleis }}</p>
+<p>RAM: {{ laptop.RAM }}</p>
+<p>Processor: {{ laptop.CPU }}</p>
+<p>Game card: {{ laptop.video_card }}</p>
+<p>Number of Nucleis: {{ laptop.nucleis }}</p>
 <div>
     {{ laptop.description }}
 </div>
