--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@
     <blockquote class="blockquote">
         <p class="mb-0">{{ post.text }}</p>
     </blockquote>
-    <p> Rate: {{ post.rate }} </p>
+   <h3> About: {{ post.laptop }}  </h3>
 </div>
 <hr>
 
