--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="/laptop/">Laptop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/post/">Posts</a>
+        <a class="nav-link" href="/post">Posts</a>
       </li>
     </ul>
   </div>
