--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/post">Posts</a>
       </li>
+          <li class="nav-item">
+        <a class="nav-link" href="/cart/">Cart</a>
+      </li>
     </ul>
   </div>
 </nav>
